# quacks

./: .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.rst  Makefile  README.md  README.rst  mypy.ini  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  test.yml
docs/: api.rst  conf.py  requirements.txt
src/quacks/: __init__.py  mypy.py
tests/: test_readonly.py
typesafety/: test_readonly.yml
