[tool.poetry]
name = "quacks"
version = "1.1.1"
description = "Better duck-typing with mypy-compatible extensions to Protocol"
authors = ["Arie Bovenberg <a.c.bovenberg@gmail.com>"]
license = "MIT"
readme = "README.rst"
include = ["README.rst", "CHANGELOG.rst"]
repository = "https://github.com/ariebovenberg/quacks"
packages = [
    { include = "quacks", from = "src" },
]
keywords = [
    "ducktyping",
    "protocol",
    "mypy",
    "immutability",
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^9.0.3"
black = "^26"
mypy = ">=1.14,<1.15"
pytest-mypy-plugins = "^4.0.0"
isort = "^8.0.1"
pytest-cov = "^7.1.0"
flake8 = "^7"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
  \.eggs
| \.git
| \.mypy_cache
| \.tox
| \.venv
| _build
| build
| dist
)/
'''

[tool.isort]
line_length = 79
profile = 'black'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "--strict-markers",
  "--strict-config",

  "--cov=quacks",
  "--cov-report=html",
  "--cov-report=xml",
  "--cov-branch",
  "--cov-fail-under=100",

  "--mypy-ini-file=mypy.ini",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
